# framework_ultraverse

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ultraverse.example.json  ultraverse.md
.github/workflows/: ultraverse-tests.yml
ci/: Dockerfile
cmake/: mysql_binlogevents.cmake
llm_prompts/: configure-github-actions.xml  esperanza-create-mini-testcase.en.xml  esperanza-create-mini-testcase.xml  esperanza-create-minishop-append-case.en.xml  esperanza-create-minishop-append-case.xml  implement-proc-patcher.en.xml  implement-proc-patcher.xml  refactor-statelogd-args.en.xml  refactor-statelogd-args.xml  refactor-ultsqlparser.en.xml  refactor-ultsqlparser.xml  replace-cereal-with-protobuf3.xml  tidb-parser-add-support-declare-condition-with-sqlstate.en.xml  tidb-parser-add-support-declare-condition-with-sqlstate.xml  tidb-parser-add-support-function.en.xml  tidb-parser-add-support-function.xml  tidb-parser-add-support-loop-with-iterate.en.xml  tidb-parser-add-support-loop-with-iterate.xml  tidb-parser-add-support-signal-with-sqlstate.en.xml  tidb-parser-add-support-signal-with-sqlstate.xml  tidb-parser-add-support-txn.en.xml  tidb-parser-add-support-txn.xml
parserlib/: CMakeLists.txt  capi.go  go.mod  go.sum  ultparser_query.proto
parserlib/parser/: expr.go  parser.go  parser_test.go  proc.go  stmt.go
procpatcher/: .gitignore  README.md  go.mod  go.sum  main.go
procpatcher/delimiter/: preprocessor.go
procpatcher/patcher/: depatcher.go  depatcher_test.go  formatter.go  insert_builder.go  inserter.go  patcher.go  repatcher.go  repatcher_test.go  scope.go  text_patch.go
procpatcher/test-cases/: calculate_final_price.sql  cleanup_inactive_users.sql  early_exit.sql  error_handler.sql  greeter.sql  lucky_chance.sql  place_order.sql  (+1 more)
scripts/esperanza/: AGENTS.md  README.md  astore.py  cfp.py  cfp_standalone.py  dbdump.sql  envfile  epinions.py  epinions_standalone.py  minishop.py  minishop_prepend.py  pyproject.toml  seats.py  seats_standalone.py  tatp.py  tatp_standalone.py  tpcc.py  tpcc_standalone.py  updateonly.py
scripts/esperanza/epinions_sql/: ddl-mysql.sql
scripts/esperanza/esperanza/benchbase/: benchmark_session.py  benchmark_session_cfp.py
scripts/esperanza/esperanza/cfp/: constants.py  data_generator.py  del_and_insert.py  get_binlog.py  random_utils.py  session.py  transactions.py  workload.py
scripts/esperanza/esperanza/epinions/: constants.py  data_generator.py  session.py  transactions.py  workload.py
scripts/esperanza/esperanza/mysql/: mysqld.py  mysqld_cfp.py
scripts/esperanza/esperanza/seats/: __init__.py  constants.py  data_generator.py  encoding.py  session.py  transactions.py  workload.py
scripts/esperanza/esperanza/setting/: calculation.py  create_tb.py  del_and_insert.py
scripts/esperanza/esperanza/setting/dataset/: assemblerA.csv  assemblerB.csv  assemblerC.csv  cfpvalA.csv  cfpvalB.csv  cfpvalC.csv  hash_parts_tree.csv  parts_treeA.csv  parts_treeB.csv  parts_treeC.csv
scripts/esperanza/esperanza/tatp/: constants.py  data_generator.py  random_utils.py  session.py  transactions.py  workload.py
scripts/esperanza/esperanza/tpcc/: constants.py  data_generator.py  random_utils.py  session.py  transactions.py  workload.py
scripts/esperanza/esperanza/utils/: download_mysql.py
scripts/esperanza/minishop/: procedures.sql  scenario.sql  schema.sql  verify.sql
scripts/esperanza/mysql_conf/: my.cnf
scripts/esperanza/procdefs/minishop/: add_item.sql  buy_item.sql  refund_item.sql  restock_item.sql
scripts/esperanza/procdefs/seats/: DeleteReservation.sql  NewReservation.sql
scripts/esperanza/procdefs/tpcc/: Delivery.sql  NewOrder.sql  Payment.sql
scripts/esperanza/procdefs/updateonly/: UpdateRow.sql
scripts/esperanza/seats_sql/: ddl-mysql.sql
scripts/esperanza/tatp_sql/: ddl-mysql.sql
scripts/esperanza/tpcc_sql/: ddl-mysql.sql
src/: CMakeLists.txt  darwincompat.hpp  db_state_change.cpp  db_state_change.hpp  state_log_viewer.cpp  statelogd.cpp
src/base/: DBEvent.cpp  DBEvent.hpp  DBHandle.hpp  DBHandlePool.hpp  TaskExecutor.hpp
src/config/: UltraverseConfig.cpp  UltraverseConfig.hpp
src/mariadb/: DBEvent.cpp  DBEvent.hpp  DBHandle.cpp  DBHandle.hpp  DBHandlePoolAdapter.hpp
src/mariadb/binlog/: BinaryLogReader.hpp  BinaryLogSequentialReader.cpp  BinaryLogSequentialReader.hpp  MySQLBinaryLogReaderV2.cpp  MySQLBinaryLogReaderV2.hpp
src/mariadb/state/: StateHash.cpp  StateHash.hpp  StateItem.cc  StateItem.h  WhereClauseBuilder.cpp  WhereClauseBuilder.hpp  state_log_hdr.h
src/mariadb/state/new/: ColumnDependencyGraph.cpp  ColumnDependencyGraph.hpp  GIDIndexReader.cpp  GIDIndexWriter.cpp  HashWatcher.hpp  ProcCall.cpp  ProcCall.hpp  ProcLogReader.cpp  ProcLogReader.hpp  ProcMatcher.cpp  ProcMatcher.hpp  Query.cpp  Query.hpp  StateChangeContext.hpp  StateChangePlan.cpp  StateChangePlan.hpp  StateChangeReplayPlan.hpp  StateChanger.cpp  StateChanger.hpp  StateChanger.prepare.cpp  StateChanger.replay.cpp  StateChanger.sqlload.cpp  StateClusterWriter.cpp  StateIO.cpp  StateIO.hpp  StateLogReader.cpp  StateLogReader.hpp  StateLogWriter.cpp  TableDependencyGraph.cpp  TableDependencyGraph.hpp  Transaction.cpp  Transaction.hpp
src/mariadb/state/new/analysis/: TaintAnalyzer.cpp  TaintAnalyzer.hpp
src/mariadb/state/new/cluster/: NamingHistory.cpp  RowCluster.cpp  RowCluster.hpp  StateCluster.cpp  StateCluster.hpp  StateRelationshipResolver.cpp  StateRelationshipResolver.hpp
src/mariadb/state/new/graph/: RowGraph.cpp  RowGraph.hpp
src/mariadb/state/new/proto/: ultraverse_state.proto  ultraverse_state_fwd.hpp
src/utils/: StringUtil.cpp  StringUtil.hpp  log.cpp
tests/: CMakeLists.txt  keycolumnparser-test.cpp  naminghistory-test.cpp  procmatcher-trace-test.cpp  query-transaction-serialization-test.cpp  queryeventbase-rwset-test.cpp  relationship-resolver-test.cpp  rowcluster-test.cpp  rowgraph-test.cpp  sqlparser-test.cpp  state_test_helpers.hpp  statechanger-test.cpp  statecluster-test.cpp  statehash-test.cpp  stateitem-test.cpp  tabledependencygraph-test.cpp  taintanalyzer-test.cpp  ultraverseconfig-test.cpp
